@@ -7,6 +7,7 @@ next version
 
 * New procedure 'dynamic-wind*' that behaves like 'dynamic-wind' except
   for interacting nicely with rescheduling.
+* Printing scheduler objects is now way less verbose.
 
 fibers 1.3.1 -- 2023-05-30
 ==========================
